# facemorpher

./: .gitignore  CMakeLists.txt  CMakeUtils.txt  README.md  main.cpp
dlib/: add_global_compiler_switch.cmake
face-landmark-detector/: CMakeLists.txt
face-landmark-detector/inc/: landmark_detector.h
face-landmark-detector/src/: face_landmark_detection_ex.cpp  landmark_detector.cpp
face-morpher/: CMakeLists.txt
face-morpher/inc/: face_morpher.h
face-morpher/src/: faceMorph.cpp  face_morpher.cpp
movie-creator/: CMakeLists.txt
movie-creator/inc/: movie_creator.h
movie-creator/src/: movie_creator.cpp
